--- a/back-end/functions/package.json
+++ b/back-end/functions/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "@tensorflow/tfjs": "^4.3.0",
+    "canvas": "^2.11.0",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0"
   },
