--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -1,5 +1,10 @@
 Flask
-opencv-python
-keras
-scikit-image
 firebase-admin
+
+opencv-python
+scikit-image
+# only tensorflow is required but due to limited space of 512 MB onrender.com, so include only required libs only
+keras
+keras-models
+keras-utils
+# Ends
