--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-firebase/app": "^17.3.2",
     "@react-native-firebase/auth": "^17.3.2",
     "@react-native-firebase/firestore": "^17.3.2",
@@ -25,15 +26,16 @@
     "expo": "^48.0.9",
     "expo-haptics": "^12.2.1",
     "expo-image-picker": "^14.1.1",
-    "expo-splash-screen": "~0.18.1",
     "formik": "^2.2.9",
-    "lodash.isequal": "^4.5.0",
-    "prop-types": "^15.8.1",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-native": "^0.71.4",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
+    "rn-loading-dots": "^0.0.8",
     "yup": "^1.0.2"
   },
   "devDependencies": {
