--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -29,11 +29,13 @@
     "formik": "^2.2.9",
     "openai": "^3.2.1",
     "react": "^18.2.0",
-    "react-native": "^0.71.4",
+    "react-native": "0.71.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-url-polyfill": "^1.3.0",
     "rn-loading-dots": "^0.0.8",
     "yup": "^1.0.2"
