--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -30,8 +30,11 @@
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-native": "0.71.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-redash": "^14.2.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
