--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -15,34 +15,39 @@
     "@expo/vector-icons": "^13.0.0",
     "@mrakesh0608/react-native-loading-dots": "^1.0.9",
     "@react-native-clipboard/clipboard": "^1.11.2",
-    "@react-native-firebase/app": "^17.3.2",
-    "@react-native-firebase/auth": "^17.3.2",
-    "@react-native-firebase/firestore": "^17.3.2",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-native-firebase/remote-config": "^17.4.2",
-    "@react-native-firebase/storage": "^17.3.2",
+    "@react-native-firebase/storage": "^17.4.2",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "@types/react": "~18.0.27",
-    "expo": "^48.0.9",
+    "@types/react": "~18.0.35",
+    "expo": "^48.0.10",
     "expo-haptics": "^12.2.1",
     "expo-image-picker": "^14.1.1",
     "formik": "^2.2.9",
     "openai": "^3.2.1",
     "react": "^18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-safe-area-context": "4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-share": "^8.2.1",
+    "react-native-smart-gallery": "^1.2.1",
     "react-native-url-polyfill": "^1.3.0",
-    "yup": "^1.0.2"
+    "rn-fetch-blob": "^0.12.0",
+    "yup": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.21.4",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo-dev-client": "^2.1.5",
-    "typescript": "^4.9.4"
+    "expo-dev-client": "^2.1.6",
+    "typescript": "^5.0.4"
   }
 }
