--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-node_modules/
-/package-lock.json
 .expo/
 dist/
 npm-debug.*
@@ -57,7 +55,7 @@ local.properties
 
 # node.js
 #
-node_modules/
+node_modules
 npm-debug.log
 yarn-error.log
 
@@ -76,3 +74,7 @@ web-build/
 dist/
 
 # @end expo-cli
+frontEnd/package-lock.json
+
+#python
+__pycache__
