--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@mrakesh0608/react-native-loading-dots": "^1.0.9",
     "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/dynamic-links": "^17.4.2",
