--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "start": "npx expo start --dev-client",
     "start-c": "npx expo start --dev-client -c",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build-apk": "eas build -p android -e preview",
-    "build-dev-apk": "eas build -p android -e development"
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios",
+    "web": "npx expo start --web",
+    "build-apk": "npx eas build -p android -e preview",
+    "build-dev-apk": "npx eas build -p android -e development"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
